[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tw-dem"
version = "0.1.0"
description = "TealWaters DEM derivatives"
authors = [{name = "Jesse Anderson", email = "jesse.anderson@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.4",
    "richdem",
    "xarray>=2025.7.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.5",
]

[tool.hatch.build.targets.wheel]
packages = ["python_template"]

[tool.ruff.lint]
# D enables all `pydocstyle` rules
# I enables all `isort` rules
# ANN enables all type `annotations` rules
select = ["D", "I", "ANN"]

# disable `D417`, required documentation for every function parameter.
ignore = ["D417"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["D", "ANN"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=python_template"
testpaths = ["tests"]

[tool.coverage.run]
source = ["python_template"]

[tool.coverage.report]
exclude_lines = [
]

[tool.pyright]
typeCheckingMode = "strict"

[tool.uv.sources]
richdem = { git = "https://github.com/jessjaco/richdem.git", subdirectory = "wrappers/pyrichdem", rev = "import-fix" }
